--- a/views/itinerary.ejs
+++ b/views/itinerary.ejs
@@ -148,10 +148,13 @@
     </div>
   </div>
 </div>
-
-<button class="btn">
-  <i class="fa fa-download"></i> Download full itinery
-</button>
+<div class="container">
+  <a href="<%= file_path %>" class="nav-link" download>
+    <button class="btnd">
+      <i class="fa fa-download"></i> Download full itinery
+    </button>
+  </a>
+</div>
 <br /><br />
 <!--optional javascript and Jquery-->
 <script src="/JS/itinery_display.js"></script>
