--- a/views/itinerary.ejs
+++ b/views/itinerary.ejs
@@ -180,6 +180,10 @@
   </button>
 </a>
 
+<button class="btn2">
+  <i class="fa fa-download"></i> Download full itinery
+</button>
+
 
 <br /><br />
 <!--optional javascript and Jquery-->
