--- a/views/tour-list.ejs
+++ b/views/tour-list.ejs
@@ -50,15 +50,15 @@
 
 <div style="height: 60px;"></div>
 
-<div class="container-fluid">
+<div class="container">
     <% for(var j=0; j< toursByRegion.length; j++){ %>
-    <div class="container-fluid bg-light mr-1">
+    <div class="container bg-light mr-1">
         <h3>Region: <span class="badge badge-secondary"><%= toursByRegion[j][0].region %></span></h3>
     </div>
     <div class="card-deck mb-4">
         <% for(var k=0; k< toursByRegion[j].length; k++){ %>
         <div class="card border-secondary">
-            <img src="" class="card-img-top" alt="...">
+            <img src="<%= toursByRegion[j][k].places[0].image_path %>" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title"><a
                         href="/tours/<%= toursByRegion[j][k].t_id %>"><%= toursByRegion[j][k].name %></a></h5>
