--- a/views/tour-list.ejs
+++ b/views/tour-list.ejs
@@ -48,6 +48,8 @@
     </div>
 </nav>
 
+<div class="main">
+
 <div style="height: 60px;"></div>
 
 <div class="container">
@@ -80,6 +82,8 @@
         <% } %>
     </div>
     <% } %>
+</div>
+
 </div>
 
 <div class="container-fluid">
