--- a/views/create-tour.ejs
+++ b/views/create-tour.ejs
@@ -240,38 +240,38 @@
         <div class="card-body">
             <form action="/admin/register" method="post" autocomplete="off">
                 <div class="form-group">
-                    <div class="row">
-                        <div class="col">
+                    <div class="row justify-content-center">
+                        <div class="col-6">
                             <input type="mail" class="form-control" placeholder="Email" name="user[email_id]" value=""
                                 required>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="row">
-                        <div class="col">
+                    <div class="row justify-content-center">
+                        <div class="col-6">
                             <input type="text" class="form-control" placeholder="First Name" name="user[fname]" value=""
                                 required>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="row">
-                        <div class="col">
+                    <div class="row justify-content-center">
+                        <div class="col-6">
                             <input type="text" class="form-control" placeholder="Last Name" name="user[lname]" value="">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="row">
-                        <div class="col">
+                    <div class="row justify-content-center">
+                        <div class="col-6">
                             <input type="password" class="form-control" placeholder="Password" name="user[password]"
                                 value="">
                         </div>
                     </div>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-info btn-block round-button">Register</button>
+                    <button type="submit" class="btn btn-primary">Register</button>
                 </div>
             </form>
         </div>
