--- a/views/itinerary.ejs
+++ b/views/itinerary.ejs
@@ -89,8 +89,8 @@
 </div>
 <br />
 <br /><br />
-<div class="next">Next</div>
-<div class="prev">Prev</div>
+<div class="next"><i class="fa fa-chevron-circle-right"></i></div>
+<div class="prev"><i class="fa fa-chevron-circle-left"></i></div>
 
 <div class="container">
   <div class="card bg-light border-dark">
@@ -180,6 +180,7 @@
     </button>
   </a>
 </div>
+<br>
 
 <button class="btnd"><i class="fa fa-download"></i> Send via Email</button>
 
