--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -98,6 +98,9 @@
     </div>
     <!-- ./Carousel -->
 </header>
+<br>
+<br>
+
 
 <div id="gradient"></div>
 <div id="card">
@@ -105,6 +108,11 @@
     <p class="content">100000+ Satisfied Guests<br><br>Earn a Lifetime of Friendship and many more benefits</p>
     <p class="content">Largest Tour Operator for exploring India<br><br>Carry zero money on the tour</p>
 </div>
+
+<div class="line-break">
+    
+</div> 
+
 <h4 class="tour-video">A glimpse of some of our Top Rated Tours</h4>
 <h5 class="tour-video">just to help you decide better...</h5>
 
@@ -175,11 +183,16 @@
 
 <br><br>
 
+<div class="card-display">
+    <h4>A few of our tours</h4>
+</div>
+<br><br>
+
 <div class="container">
     <div class="card-deck">
         <% for(var j=0; j< tours.length; j++){ %>
         <div class="card border-secondary">
-            <img src="<%= tours[j].places[0].image_path %>" class="card-img-top" alt="...">
+            <img src="<%= tours[j].places[0].image_path %>" class="card-img-top" alt="..." width=300 height=300>
             <div class="card-body">
                 <h5 class="card-title"><a href="/tours/<%= tours[j].t_id %>"><%= tours[j].name %></a></h5>
                 <p class=" card-text">
