--- a/views/about.ejs
+++ b/views/about.ejs
@@ -242,48 +242,56 @@
 </div>
 <br>
 
-<section id="footer">
-    <div class="container">
-        <div class="row text-center text-xs-center text-sm-left text-md-left">
-            <div class="col-xs-12 col-sm-4 col-md-4">
+<div class="">
+    <section id="footer">
+        <div class="container-fluid">
+            <div class="row text-center text-xs-center text-sm-left text-md-left">
+                <div class="col-xs-12 col-sm-4 col-md-4">
 
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5>Quick links</h5>
+                    <ul class="list-unstyled quick-links">
+                        <li><a href="/"><i class="fa fa-angle-double-right"></i>Home</a></li>
+                        <li><a href="/about"><i class="fa fa-angle-double-right"></i>About</a></li>
+                        <li><a href="/contact"><i class="fa fa-angle-double-right"></i>Contact us</a></li>
+                        <li><a href="/privacy-policy"><i class="fa fa-angle-double-right"></i>Privacy Policy</a>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                </div>
             </div>
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <h5>Quick links</h5>
-                <ul class="list-unstyled quick-links">
-                    <li><a href="/"><i class="fa fa-angle-double-right"></i>Home</a></li>
-                    <li><a href="/about"><i class="fa fa-angle-double-right"></i>About</a></li>
-                    <li><a href="/contact"><i class="fa fa-angle-double-right"></i>Contact us</a></li>
-                    <li><a href="/privacy-policy"><i class="fa fa-angle-double-right"></i>Privacy Policy</a></li>
-
-                </ul>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+                    <ul class="list-unstyled list-inline social text-center">
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="javascript:void();" target="_blank"><i
+                                    class="fa fa-envelope"></i></a></li>
+                    </ul>
+                </div>
+                </hr>
             </div>
-            <div class="col-xs-12 col-sm-4 col-md-4">
-
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+                    <p><u><a href="#">TravelEasy</a></u> is a Registered Website helping umpteen people explore
+                        India.
+                    </p>
+                    <p class="h6"> All right Reserved.</p>
+                </div>
+                </hr>
             </div>
         </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
-                <ul class="list-unstyled list-inline social text-center">
-                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
-                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a></li>
-                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="list-inline-item"><a href="javascript:void();" target="_blank"><i
-                                class="fa fa-envelope"></i></a></li>
-                </ul>
-            </div>
-            </hr>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-                <p><u><a href="#">TravelEasy</a></u> is a Registered Website helping umpteen people explore India.</p>
-                <p class="h6"> All right Reserved.></p>
-            </div>
-            </hr>
-        </div>
-    </div>
-</section>
+    </section>
+</div>
 <!-- ./Footer -->
 
 <!-- Optional JavaScript -->
