--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -386,7 +386,7 @@
     </div>
 </div>
 <br>
-<div class="container-fluid">
+<div class="">
     <section id="footer">
         <div class="container-fluid">
             <div class="row text-center text-xs-center text-sm-left text-md-left">
