--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,6 +16,7 @@
 
 <body data-vide-bg="Media/ocean">
     <div class="login-form">
+        <div class=".text-center">
         <div class="card" style="width: 25rem;">
             <div class="card-header text-center">
                 <nav>
@@ -111,6 +112,7 @@
             </div>
         </div>
     </div>
+</div>
 
     <!-- Optional JavaScript -->
 
