--- a/views/results.ejs
+++ b/views/results.ejs
@@ -59,7 +59,8 @@
 
 
 <div class="main">
-    
+    <div id="first"></div>
+    <div id="second">
 <div class="container-fluid">
     <h3>Your search results for: <strong><%= keyword %></strong></h3>
 </div>
@@ -90,6 +91,7 @@
         </div>
     </div>
     <% } %>
+</div>
 </div>
 </div>
 </div>
