--- a/public/CSS/contact_us.css
+++ b/public/CSS/contact_us.css
@@ -5,11 +5,19 @@ body {
   height: 100vh;
 }
 
+.navbar-brand {
+  float: left;
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: inline;
+}
+
 .w3-container {
   border-radius: 25px;
   margin-top: 50px;
   margin-right: 1200px;
-  background-color: rgb(221, 226, 231);
+  background-color: rgb(247, 228, 176);
   fill-opacity: 1;
   border-style: 2px solid rgb(245, 245, 182);
 }
