--- a/public/CSS/search.css
+++ b/public/CSS/search.css
@@ -1,16 +1,32 @@
+.navbar-brand {
+    float: left;
+    position: fixed;
+    left: 20;
+    top: 8;
+    display: inline;
+}
+
 .card-container {
     width: 575;
     height: 500;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    top: 0px;
+    top: 100px;
     opacity: 1;
 }
 
-.main {
+div#first {
     background-image: url("/Media/bg7.jpg");
     opacity: 0.5;
     width: 1520;
     height: 1024;
+}
+
+div#second {
+    position: absolute;
+    width: 1520;
+    height: 1024;
+    left: 0;
+    top: 70;
 }
