--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -19,11 +19,13 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
+            <div class="logo-center">
             <a class="navbar-brand" href="/">
                 <img src="/Media/logo.png" width="30" height="30" style="border-radius: 4px;"
                     class="d-inline-block align-top" alt="Logo">
                 TravelEasy
             </a>
+        </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
