--- a/views/tour-list.ejs
+++ b/views/tour-list.ejs
@@ -86,7 +86,8 @@
 
 </div>
 
-<div class="container-fluid">
+<div >
+
     <section id="footer">
         <div class="container-fluid">
             <div class="row text-center text-xs-center text-sm-left text-md-left">
